--- a/BulkyBook/Areas/Admin/Views/Category/Index.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Category/Index.cshtml
@@ -9,7 +9,7 @@
         <h2 class="text-primary">Category List </h2>
     </div>
     <div class="col-6 text-right">
-        <a class="btn btn-primary"><i class="fas fa-plus"></i> &nbsp; Create New Category</a>
+        <a class="btn btn-primary" asp-action="Upsert"><i class="fas fa-plus"></i> &nbsp; Create New Category</a>
     </div>
 </div>
 
@@ -27,6 +27,6 @@
 
 @section Scripts{ 
 
-<script src="~/js/Category.js"></script>
+<script src="~/js/category.js"></script>
 }
 
